--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,7 +3,6 @@
     "com.hwaet.projectcloner": "https://github.com/hwaet/UnityProjectCloner.git",
     "com.unity.cinemachine": "2.9.1",
     "com.unity.collab-proxy": "1.17.6",
-    "com.unity.entities": "0.51.1-preview.21",
     "com.unity.formats.fbx": "4.1.3",
     "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
@@ -12,6 +11,7 @@
     "com.unity.probuilder": "5.0.6",
     "com.unity.recorder": "3.0.3",
     "com.unity.render-pipelines.universal": "12.1.7",
+    "com.unity.rendering.hybrid": "0.51.1-preview.21",
     "com.unity.test-framework": "2.0.1-pre.18",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
