--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 /[Pp]roject[Ss]ettings/[Pp]ackages/
+/[Aa]ssets/[Ss]cene[Dd]ependencies[Cc]ache/
+/[Ss]treaming[Aasets]/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
